[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/UI/StartScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/font_default.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/montserrat_extrabold.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 24
use_mipmaps = true
font_data = ExtResource( 3 )

[node name="StartScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 512.0
margin_bottom = 304.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGame" type="ColorRect" parent="."]
margin_left = 166.0
margin_top = 132.0
margin_right = 346.0
margin_bottom = 172.0
color = Color( 0.352941, 0.352941, 0.352941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NewGame"]
margin_right = 180.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "START NEW GAME"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HallOfFame" type="ColorRect" parent="."]
margin_left = 166.0
margin_top = 182.0
margin_right = 346.0
margin_bottom = 222.0
color = Color( 0.352941, 0.352941, 0.352941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HallOfFame"]
margin_right = 180.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "HALL OF FAME"
align = 1
valign = 1

[node name="ExitGame" type="ColorRect" parent="."]
margin_left = 166.0
margin_top = 232.0
margin_right = 346.0
margin_bottom = 272.0
color = Color( 0.352941, 0.352941, 0.352941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ExitGame"]
margin_right = 180.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "EXIT GAME"
align = 1
valign = 1

[node name="OmasHood" type="ColorRect" parent="."]
margin_left = 166.0
margin_top = 80.0
margin_right = 346.0
margin_bottom = 120.0
rect_rotation = -30.0
color = Color( 0.396078, 0.0235294, 0.0235294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="OmasHood"]
margin_right = 180.0
margin_bottom = 40.0
rect_rotation = 1.2
size_flags_horizontal = 15
size_flags_stretch_ratio = 1.26
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.678431, 0.741176, 0.270588, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.164706, 0.164706, 0.164706, 1 )
text = "OMAS HOOD"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
